cross_cutting/k8s/oauth2_proxy/config/springServer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-server-deployment
  labels:
    app: spring-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-server
  template:
    metadata:
      labels:
        app: spring-server
    spec:
      containers:
      - name: spring-spring
        image: spring-server
        imagePullPolicy: Never
        ports:
        - containerPort: 8090
      
---
apiVersion: v1
kind: Service
metadata:
  labels:
  name: spring-server-service
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8090
    targetPort: 8090
  selector:
    app: spring-server
